V2.4.1 * Fix issue with org.uncommons.reportng.knownDefectsMode : false
       * 
V2.4.0 * New Results menu. Results per Group
       * Various Fixes
       * Show invocationCount per method
       * Show timeout per method
       * 
V2.3.1 * Links for Package Results
       * Remove sorting from run arguments page
       * Issue and general feature are not case sensitive
       *
V2.3.0 * New Results menu. Results per package 
       * External Links in report
       * Hover for features and issues
       * Hover for Issues table in overview page
       * Tooltip text in overview page
       * Blue Color for expand/collapse features and issues
       * Various Fixes
       * 
V2.2.2 * Sort Suites
       * Sort Tests
       * Features and New Features grouped
       * Issues grouped
       * 
V2.2.1 * Class name on top of every test and test method over description at left panel
       * Tooltips for buttons
       * Collapse/Expand test methods
       * Smaller sizes for regression columns
       * Different msgs in Release status for empty and skipped runs
       * Collapse Only Pass,Skip,Fixed,Known tests steps
       * Print @annotation in class results
       * Print in separate table regression vs new features issues
       * Print in Overview number of issues for Total,Regression and New Features
       *
V2.2.0 * Skip Execution Mode
       * Bug Fixes
       *
V2.1.0 * Style sheet Changes
       * In case of Tests with multi classes report every class in Class.results.html file
       *
V2.0.2 * Bug Fixes
       *
V2.0.1 * Initial Import