@@ -11,7 +11,7 @@ retries=Retries
 failed.tooltip=Some tests failed.
 failedConfiguration=Failed Configuration
 failedTests=Failed
-generatedBy=Generated by <a href="http://www.testng.org" target="_top">TestNG</a> with <a href="https://github.com/sdrss/reportNG" target="_top">ReportNG v2.4.0</a><br>
+generatedBy=Generated by <a href="http://www.testng.org" target="_top">TestNG</a> with <a href="https://github.com/sdrss/reportNG" target="_top">ReportNG v2.4.1</a><br>
 groups=Groups
 groupsFor=Groups for
 logOutput=Log Output
