@@ -1,5 +1,7 @@
 V2.4.1 * Fix issue with org.uncommons.reportng.knownDefectsMode : false
-       * 
+       * Print System.out report steps
+       * Show timeout per method if declared as annotation only
+       *
 V2.4.0 * New Results menu. Results per Group
        * Various Fixes
        * Show invocationCount per method
